--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "firstreactapp",
+  "homepage": "https:/srijit2002.github.io/FAQPage.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https:/srijit2002.github.io/FaqPage",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
